--- a/CSS/layout/_navbar.scss
+++ b/CSS/layout/_navbar.scss
@@ -11,6 +11,26 @@
     a {
         color: white;
     }
+
+    @include media($sm...) {
+        justify-content: flex-end;
+       a {
+        padding-right: 2em;
+       } 
+    }
+    @include media($md...) {
+        justify-content: flex-end;
+        a {
+            padding-right: 2em;
+           } 
+    }
+    @include media($lg...) {
+        justify-content: flex-end;
+        a {
+            padding-right: 2em;
+           } 
+
+    }
 }
 
 
@@ -36,6 +56,44 @@ nav {
                 color: #fff;
                 text-decoration: none;
             }
+
+        }
+    }
+
+    @include media($xs-L...) {
+        #nav-icon3 {
+            display: none;
+        }
+       .container ul a {
+            color: $secondary-color;
+        }
+
+    }
+    @include media($sm...) {
+        #nav-icon3 {
+            display: none;
+        }
+       .container ul a {
+            color: $secondary-color;
+        }
+    }
+   
+    @include media($md...) {
+        #nav-icon3 {
+            display: none;
+        }
+       .container ul a {
+            color: $secondary-color;
+            padding-right: 4em;
+        }
+    }
+    @include media($lg...) {
+        #nav-icon3 {
+            display: none;
+        }
+       .container ul a {
+            color: $secondary-color;
+            padding-right: 5em;
         }
     }
 }
@@ -56,14 +114,92 @@ nav {
         display: none;
     }
 
+    @include media($xs-L...) {
+        li {
+            display: block;
+            color: $secondary-color;
+        }
+         display: flex;
+         justify-content: space-evenly;
+         align-items: center;
+         position: inherit;
+         line-height: inherit;
+         background-color: transparent;
+        
+    }
+    @include media($sm...) {
+        li {
+            display: block;
+            color: $secondary-color;
+        }
+         display: flex;
+         justify-content: space-evenly;
+         align-items: center;
+         position: inherit;
+         line-height: inherit;
+         background-color: transparent;
+    }
+   
+    @include media($md...) {
+        li {
+            display: block;
+            color: $secondary-color;
+        }
+         display: flex;
+         justify-content: flex-end;
+         align-items: center;
+         position: inherit;
+         line-height: inherit;
+         background-color: transparent;
+    }
+    @include media($lg...) {
+        li {
+            display: block;
+            color: $secondary-color;
+        }
+         display: flex;
+         justify-content: flex-end;
+         align-items: center;
+         position: inherit;
+         line-height: inherit;
+         background-color: transparent;
+    }
 }
 
 .slideNav {
-    width: 0;
-    // transform: translateX(12em);
-    // display: none;
+    width:0;
+
+    @include media($xs-L...) {
+       width: 100%;
+    }
+    @include media($sm...) {
+       width: 100%;
+    }
+    @include media($md...) {
+       width: 100%;
+    }
+    @include media($lg...) {
+       width: 100%;
+    }
 }
 
 .nav img {
     width: 70%;
+
+    @include media($xs-L...) {
+        width: 90%;
+        padding-left: 1em;
+     }
+     @include media($sm...) {
+        width: 100%;
+        padding-left: 1em;
+     }
+     @include media($md...) {
+        width: 100%;
+        padding-left: 1em;
+     }
+     @include media($lg...) {
+        width: 100%;
+        padding-left: 1em;
+     }
 }
