--- a/CSS/main.css
+++ b/CSS/main.css
@@ -67,6 +67,24 @@ noscript {
   margin: 0;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .container {
+    margin: 0 10%  0 10%;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .container {
+    margin: 0 10%  0 10%;
+  }
+}
+
+@media (min-width: 1281px) {
+  .container {
+    margin: 0 10%  0 10%;
+  }
+}
+
 .hero-image {
   background-image: url(/images/hero_image.jpg);
   width: 100%;
@@ -90,11 +108,59 @@ noscript {
   background-color: rgba(255, 255, 255, 0.555);
 }
 
+@media (min-width: 482px) and (max-width: 767px) {
+  .hero-image img {
+    width: 12em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .hero-image img {
+    width: 14em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .hero-image img {
+    width: 16em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .hero-image img {
+    width: 18em;
+  }
+}
+
 .hero-banner-text {
   color: #444444;
   margin-top: 2em;
   background-color: rgba(255, 255, 255, 0.555);
   padding: 0.5rem;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .hero-banner-text {
+    font-size: 1.3em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .hero-banner-text {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .hero-banner-text {
+    font-size: 1.5em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .hero-banner-text {
+    font-size: 1.6em;
+  }
 }
 
 .credit {
@@ -123,6 +189,39 @@ noscript {
 
 .top_contact a {
   color: white;
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .top_contact {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .top_contact a {
+    padding-right: 2em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .top_contact {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .top_contact a {
+    padding-right: 2em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .top_contact {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .top_contact a {
+    padding-right: 2em;
+  }
 }
 
 nav {
@@ -156,6 +255,44 @@ nav .container ul a {
   text-decoration: none;
 }
 
+@media (min-width: 482px) and (max-width: 767px) {
+  nav #nav-icon3 {
+    display: none;
+  }
+  nav .container ul a {
+    color: #444444;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  nav #nav-icon3 {
+    display: none;
+  }
+  nav .container ul a {
+    color: #444444;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  nav #nav-icon3 {
+    display: none;
+  }
+  nav .container ul a {
+    color: #444444;
+    padding-right: 4em;
+  }
+}
+
+@media (min-width: 1281px) {
+  nav #nav-icon3 {
+    display: none;
+  }
+  nav .container ul a {
+    color: #444444;
+    padding-right: 5em;
+  }
+}
+
 .nav-list {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -175,12 +312,148 @@ nav .container ul a {
   display: none;
 }
 
+@media (min-width: 482px) and (max-width: 767px) {
+  .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: inherit;
+    line-height: inherit;
+    background-color: transparent;
+  }
+  .nav-list li {
+    display: block;
+    color: #444444;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: inherit;
+    line-height: inherit;
+    background-color: transparent;
+  }
+  .nav-list li {
+    display: block;
+    color: #444444;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: inherit;
+    line-height: inherit;
+    background-color: transparent;
+  }
+  .nav-list li {
+    display: block;
+    color: #444444;
+  }
+}
+
+@media (min-width: 1281px) {
+  .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: inherit;
+    line-height: inherit;
+    background-color: transparent;
+  }
+  .nav-list li {
+    display: block;
+    color: #444444;
+  }
+}
+
 .slideNav {
   width: 0;
 }
 
+@media (min-width: 482px) and (max-width: 767px) {
+  .slideNav {
+    width: 100%;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .slideNav {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .slideNav {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1281px) {
+  .slideNav {
+    width: 100%;
+  }
+}
+
 .nav img {
   width: 70%;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .nav img {
+    width: 90%;
+    padding-left: 1em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .nav img {
+    width: 100%;
+    padding-left: 1em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .nav img {
+    width: 100%;
+    padding-left: 1em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .nav img {
+    width: 100%;
+    padding-left: 1em;
+  }
 }
 
 footer {
@@ -213,6 +486,24 @@ footer {
   color: white;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .footer-sub-wrapper h4 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .footer-sub-wrapper h4 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .footer-sub-wrapper h4 {
+    font-size: 1.6em;
+  }
+}
+
 .footer-sub-wrapper p {
   color: #fff6d6;
   font-size: 0.9rem;
@@ -220,6 +511,30 @@ footer {
 
 .footer-sub-wrapper p a {
   color: #fff6d6;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .footer-sub-wrapper p {
+    font-size: 1em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .footer-sub-wrapper p {
+    font-size: 1.1em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .footer-sub-wrapper p {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .footer-sub-wrapper p {
+    font-size: 1.4em;
+  }
 }
 
 .social {
@@ -232,6 +547,30 @@ footer {
 
 .social img {
   width: 15%;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .social img {
+    width: 10%;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .social img {
+    width: 10%;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .social img {
+    width: 12%;
+  }
+}
+
+@media (min-width: 1281px) {
+  .social img {
+    width: 6%;
+  }
 }
 
 .location {
@@ -263,6 +602,30 @@ footer {
 
 .copyright a {
   color: #f1f1b7;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .copyright {
+    font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .copyright {
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .copyright {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1281px) {
+  .copyright {
+    font-size: 1.2rem;
+  }
 }
 
 * {
@@ -348,11 +711,69 @@ footer {
   padding: 0.6em;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .gallery-sub-wrapper {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
+  .gallery-sub-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .gallery-sub-wrapper {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
+  .gallery-sub-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .gallery-sub-wrapper {
+    -ms-grid-columns: 1fr  1fr 1fr;
+        grid-template-columns: 1fr  1fr 1fr;
+  }
+  .gallery-sub-wrapper h2 {
+    font-size: 1.6em;
+  }
+}
+
 .gallery-image {
-  width: 10em;
-  height: 10em;
+  width: 9.5em;
+  height: 9.5em;
   -webkit-box-shadow: #cacaca 2px 2px 2px;
           box-shadow: #cacaca 2px 2px 2px;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .gallery-image {
+    width: 16em;
+    height: 14em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .gallery-image {
+    width: 12em;
+    height: 10em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .gallery-image {
+    width: 15em;
+    height: 13em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .gallery-image {
+    width: 22em;
+    height: 20em;
+  }
 }
 
 .gallery-image img {
@@ -373,6 +794,24 @@ footer {
   padding: 0.6em;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .brand-main-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .brand-main-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .brand-main-wrapper h2 {
+    font-size: 1.6em;
+  }
+}
+
 .brand-sub-wrapper {
   display: -ms-grid;
   display: grid;
@@ -380,6 +819,34 @@ footer {
       grid-template-columns: 1fr 1fr;
   justify-items: center;
   grid-row-gap: 1rem;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .brand-sub-wrapper {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .brand-sub-wrapper {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .brand-sub-wrapper {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1281px) {
+  .brand-sub-wrapper {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .service-main-wrapper {
@@ -391,6 +858,24 @@ footer {
   font-size: 1.1rem;
   color: #444444;
   padding: 0.6em;
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .service-main-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .service-main-wrapper h2 {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .service-main-wrapper h2 {
+    font-size: 1.6em;
+  }
 }
 
 .service-sub-wrapper {
@@ -406,5 +891,29 @@ footer {
   padding: 0.4rem;
   margin: 0.4rem;
   color: #50361e;
+}
+
+@media (min-width: 482px) and (max-width: 767px) {
+  .service-sub-wrapper h4 {
+    font-size: 1em;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .service-sub-wrapper h4 {
+    font-size: 1.1em;
+  }
+}
+
+@media (min-width: 1026px) and (max-width: 1280px) {
+  .service-sub-wrapper h4 {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .service-sub-wrapper h4 {
+    font-size: 1.4em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
