corrected image url

--- a/CSS/layout/_header.scss
+++ b/CSS/layout/_header.scss
@@ -16,7 +16,7 @@
 }
 
 .hero-image {
-    background-image: url(/images/hero_image.jpg);
+    background-image: url(/images/heroImg.jpg);
     width: 100%;
     background-position: center;
     background-size: cover;
