--- a/CSS/main.css
+++ b/CSS/main.css
@@ -86,7 +86,7 @@ noscript {
 }
 
 .hero-image {
-  background-image: url(/images/hero_image.jpg);
+  background-image: url(/images/heroImg.jpg);
   width: 100%;
   background-position: center;
   background-size: cover;
