--- a/CSS/layout/_header.scss
+++ b/CSS/layout/_header.scss
@@ -16,7 +16,8 @@
 }
 
 .hero-image {
-    background-image: url(/images/heroImg.jpg);
+    background-image: url(https://images.unsplash.com/photo-1518954588695-59b8deeb40b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
+    // background-image: url(/images/heroImg.jpg);
     width: 100%;
     background-position: center;
     background-size: cover;
