--- a/CSS/main.css
+++ b/CSS/main.css
@@ -86,7 +86,7 @@ noscript {
 }
 
 .hero-image {
-  background-image: url(/images/heroImg.jpg);
+  background-image: url(https://images.unsplash.com/photo-1518954588695-59b8deeb40b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
   width: 100%;
   background-position: center;
   background-size: cover;
