--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -11,3 +11,5 @@
 @import './components/galleryImg';
 @import './components/brands';
 @import './components/servicesOffer';
+@import './components/scrollTop';
+@import './components/stickySocial';
