--- a/CSS/layout/_header.scss
+++ b/CSS/layout/_header.scss
@@ -1,6 +1,9 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     margin: 0;
-
 
     @include media($sm...) {
        @include container;
